Factory nullpointer fix
Change-Id: Ie2e9c29013acd36ddaf15383dd6b06432fbdbb66
Issue-ID: SDC-1905
Signed-off-by: andre.schmid <andre.schmid@est.tech>